# up-qe-performance

./: .ci_control.yml  .gitignore  README.md  catalog-info.yaml  locust.conf  pyproject.toml
.circleci/: config.yml
.github/: CODEOWNERS.txt  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  matrix_demo.yml  test.yml
base/: ac_ms_base_http_user.py  base_task.py  base_user.py
config/: config.py  locust.conf
config/admin_console/: config.json
config/reqres_service/: config.json
locust_tests/admin_console/config_microservices/: get_config.py
locust_tests/reqres_tests/: page_tests.py
reports/: performance_results.html  performance_results_stats.csv  performance_results_stats_history.csv
tests/admin_console/config_microservices/: get_config.py
utils/: logger.py
utils/gcloud/: gcloud_secrets.py
